--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -7,6 +7,7 @@
     <link href="{{ url_for('static', filename='vendor/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='vendor/bootstrap-icons/bootstrap-icons.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
+    <script>window.BASE_URL = '{{ request.script_root }}';</script>
 </head>
 <body>
     <div class="login-card">
